# VMCourse

./: CMakeLists.txt  README.md
asm/: asm.cpp  asm.hpp  main.cpp
core/: core.cpp  core.hpp  main.cpp
test/: factorial.txt  summ.txt
utils/: cmds.hpp  isa.hpp  label.hpp
utils/stack/: stack.cpp  stack.hpp
